# CrossPlatformLabs

./: CMakeLists.txt  conanfile.txt  test.py
src/: mymodule.cpp
